# cpp_christian_said_fethi

./: Apprentissage.h  CMakeLists.txt  Fonction_activation.h  Fonctionactivation.h  Image.cpp  Image.h  Input.cpp  Input.h  Input_intermediaire.cpp  Input_intermediaire.h  Iris.cpp  Iris.h  NN1.cpp  NN1.h  NN2.cpp  NN2.h  Perceptron.cpp  Perceptron.h  Perceptron_cache.cpp  Perceptron_cache.h  README.md  Readme  Sigmoide.cpp  Sigmoide.h  Tanh.cpp  Tanh.h  main.cpp
Interfaces/: Apprentissage.h  Fonctionactivation.h  Image.h  Input.h  Input_intermediaire.h  Iris.h  NN1.h  NN2.h  Perceptron.h  Perceptron_cache.h  Sigmoide.h  Tanh.h
Sources/: Image.cpp  Input_intermediaire.cpp  Iris.cpp  NN1.cpp  NN2.cpp  Perceptron.cpp  Perceptron_cache.cpp  Sigmoide.cpp  Tanh.cpp
